--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,41 @@
    text-align: end;
 }
 
+.content-title{
+    background-color: rgb(115, 255, 0);
+    border: 1px solid black;
+    width: 100%;
+    height: 150px;
+}
+
+.content{
+    background-color: blue;
+    border: 1px solid black;
+    width: 100%;
+    height: 500px;
+}
+
+.bg-lightblue{
+    background-color: aqua;
+}
+
 /* LAYOUT */
 .row{
     display: flex;
     flex-wrap: wrap;
+}
+.container-mid{
+    width: 70%;
+    margin: 0 auto;
+}
+
+.col-100{
+    width: 100%;
+}
+
+.col-30{
+    width: 30%;
+}
+.col-70{
+    width: 70%;
 }
