--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,13 @@
     height: 500px;
 }
 
+.content-box{
+    background-color: yellow;
+    width: 100%;
+    aspect-ratio: 1/1;
+    border: 1px solid black;
+}
+
 .bg-lightblue{
     background-color: aqua;
 }
@@ -58,4 +65,8 @@
 }
 .col-33{
     width: calc(100% / 3);
+}
+
+.col-50{
+    width: 50%;
 }
