--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,9 @@
 .bg-lightblue{
     background-color: aqua;
 }
+.bg-black{
+    background-color: black;
+}
 
 /* LAYOUT */
 .row{
@@ -69,4 +72,7 @@
 
 .col-50{
     width: 50%;
+}
+.col-20{
+    width: 20%;
 }
