--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,11 @@ body{
 header{
     font-size: 12.5px;
     font-weight: 100;
+    position: fixed;
+    background-color: #fff;
+}
+main{
+    padding-top: 58px;
 }
 
 .content-header{
