--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ header{
     font-size: 12.5px;
     font-weight: 100;
     position: fixed;
+    z-index: 1;
     background-color: #fff;
 }
 main{
@@ -25,18 +26,43 @@ main{
     background-color: rgb(115, 255, 0);
     border: 1px solid black;
     width: 100%;
-    height: 150px;
+    height: 300px;
+}
+.content-sm{
+    width: 100%;
 }
 
 .content{
     background-color: blue;
     border: 1px solid black;
     width: 100%;
-    height: 500px;
+    height: 100%;
+    position: relative;
+}
+.content-done{
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+.content-done .jumbo{
+    width: 90%;
+    position: absolute;
+    bottom: -65px;
 }
 
 .content-header .logo{
     width: 100px;
+}
+
+
+.content-sm h1{
+    font-size: 75px;
+    padding: 50px 5px 30px 5px;
+    margin-bottom: 30px;
+}
+
+.fa-arrow-down{
+    font-size: 45px;
 }
 
 /* LAYOUT */
@@ -64,6 +90,12 @@ main{
 .col-60{
     width: 60%;
 }
+.col-70{
+    width: 70%;
+}
+.col-30{
+    width: 30%;
+}
 .col-33{
     width: calc(100% / 3);
 }
@@ -82,7 +114,7 @@ main{
 
 /* UTILITIES */
 .bg-lightblue{
-    background-color: aqua;
+    background-color: #B4D0E6;
 }
 .bg-black{
     background-color: black;
@@ -105,11 +137,25 @@ main{
 .v-middle{
     vertical-align: middle;
 }
+.txt-center{
+    text-align: center;
+}
 .unstyle-link{
     text-decoration: none;
     cursor: pointer;
 }
-
+.mt-30{
+    margin-top: 30px;
+}
+.mt-50{
+    margin-top: 50px;
+}
+.mb-35{
+    margin-bottom: 35px;
+}
+.pb-55{
+    padding-bottom: 55px;
+}
 /* COMPONENTS */
 btn{
 }
