--- a/css/style.css
+++ b/css/style.css
@@ -23,26 +23,20 @@ main{
 }
 
 .content-title{
-    background-color: rgb(115, 255, 0);
-    border: 1px solid black;
     width: 100%;
-    height: 300px;
 }
 .content-sm{
     width: 100%;
 }
 
 .content{
-    background-color: blue;
-    border: 1px solid black;
     width: 100%;
-    height: 100%;
-    position: relative;
 }
 .content-done{
     width: 100%;
-    height: 100%;
+    height: 100%;   /*chiedi se questa parte va bene*/
     position: relative;
+    padding-left: 50px;
 }
 .content-done .jumbo{
     width: 90%;
@@ -57,13 +51,74 @@ main{
 
 .content-sm h1{
     font-size: 75px;
-    padding: 50px 5px 30px 5px;
+    padding: 50px 5px 30px 40px;
     margin-bottom: 30px;
+}
+.content-done p,.btn{
+    font-size: 15px;
+    font-weight: 100;
 }
 
 .fa-arrow-down{
     font-size: 45px;
 }
+
+.content-title h2{
+    font-size: 35px;
+}
+
+.input-label{
+    margin-right: 40px;
+    font-weight: 100;
+    vertical-align: middle;
+    font-size: 12.5px;
+}
+
+.input-radio{
+    margin: 30px 0 40px 0 ;
+    font-size: 12.5px;
+}
+input[type='radio'] { 
+    transform: scale(1.5); 
+    margin-right: 7.5px;
+}
+
+
+.card-vertical{
+    min-height: 750px;
+    height: 75vh;
+    border: 0.5px solid rgb(181, 181, 181);
+    display: inline-block;
+    font-weight: 100;
+}
+.tab-head{
+   text-align: center;
+   border-bottom: 0.5px solid rgb(181, 181, 181);
+   padding: 10px;
+   font-size: 12.5px;
+   font-weight: 300;
+}
+.tab-main{
+    padding: 20px;
+    margin-top: 15px;
+}
+.tab-main .btn{
+    text-align: center;
+    margin: 0 auto;
+}
+.tab-main p{
+    font-size: 12.5px;
+}
+.card-vertical i{
+    margin-right: 5px;
+}
+.hr-width{
+    width: 20%;
+}
+.tab-space-between{
+    justify-content: space-between;
+}
+
 
 /* LAYOUT */
 .row{
@@ -74,7 +129,7 @@ main{
     width: 100vw;
 }
 .container-mid{
-    width: 70%;
+    width: 65%;
     margin: 0 auto;
 }
 .container-sm{
@@ -97,7 +152,10 @@ main{
     width: 30%;
 }
 .col-33{
-    width: calc(100% / 3);
+    width: calc(100%/3);
+}
+.col-33-tab{
+    width: calc(100%/3 - 30px);
 }
 .col-50{
     width: 50%;
@@ -111,10 +169,13 @@ main{
     aspect-ratio: 1/1;
     border: 1px solid black;
 }
-
+.oppure{
+    margin-top: 50px;
+}
 /* UTILITIES */
 .bg-lightblue{
     background-color: #B4D0E6;
+    margin: 0 auto;
 }
 .bg-black{
     background-color: black;
@@ -122,6 +183,12 @@ main{
 .bg-blue{
     background-color: #0061FE;
     padding: 5px 15px;
+}
+.light-grey{
+    color: #A8A9AB;
+}
+.txt-blue{
+    color: #1979FF;
 }
 .txt-white{
     color: #fff;
@@ -150,11 +217,29 @@ main{
 .mt-50{
     margin-top: 50px;
 }
+.mt-100{
+    margin-top: 100px;
+}
+.mb-50{
+    margin-bottom: 50px;
+}
 .mb-35{
     margin-bottom: 35px;
 }
+.mb-30{
+    margin-bottom: 30px;
+}
+.mb-15{
+    margin-bottom: 15px;
+}
+.mb-5{
+    margin-bottom: 5px;
+}
 .pb-55{
     padding-bottom: 55px;
+}
+.mr-5{
+    margin-right: 5px;
 }
 /* COMPONENTS */
 btn{
