--- a/css/style.css
+++ b/css/style.css
@@ -188,6 +188,11 @@ p{
 .col-40 content{
     padding-left: 50px;
 }
+.question{
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+}
 
 /* LAYOUT */
 .row{
@@ -282,7 +287,7 @@ p{
 }
 .bg-white-noborder{
     background-color: white;
-    padding: 10px 30px;
+    padding: 10px 45px;
     font-size: 15px;
     margin-bottom: 30px;
 }
@@ -320,6 +325,9 @@ p{
     text-decoration: none;
     cursor: pointer;
 }
+.pt-15{
+    padding-top: 15px;
+}
 .mt-30{
     margin-top: 30px;
 }
@@ -350,11 +358,17 @@ p{
 .mb-5{
     margin-bottom: 5px;
 }
+.m-tb-30{
+    margin: 30px 0;
+}
 .pb-55{
     padding-bottom: 55px;
 }
 .mr-5{
     margin-right: 5px;
+}
+.pr-35{
+    padding-right: 35px;
 }
 .pl-50{
     padding-left: 50px;
