--- a/css/style.css
+++ b/css/style.css
@@ -193,6 +193,26 @@ p{
     justify-content: space-between;
     align-content: center;
 }
+.ul-footer{
+    color: #fff;
+    list-style: none;
+}
+.li-head{
+    font-size: 25px;
+    font-weight: 700;
+}
+.li-footer{
+    font-size: 15px;
+    font-weight: 400;
+}
+.middle-footer{
+    display: block;
+    width: 100%;
+    margin: 0 auto;
+}
+.lang p{
+    color: grey;
+}
 
 /* LAYOUT */
 .row{
@@ -261,6 +281,9 @@ p{
 .w-20{
     width: 20%;
 }
+.w-10{
+    width: 10%;
+}
 .opa-50{
     color: rgba(0, 0, 0, 0.25);
 }
@@ -268,6 +291,8 @@ p{
 .oppure{
     margin-top: 50px;
 }
+
+
 /* UTILITIES */
 .bg-lightblue{
     background-color: #B4D0E6;
@@ -378,6 +403,9 @@ p{
 }
 .pb-100{
     padding-bottom: 100px;
+}
+.pb-30{
+    padding-bottom: 30px;
 }
 .p-100{
     padding: 100px;
