[BONUS] added hover effect to the button and hover and click effect to the arrow in the jumbo section

--- a/BONUS/css/style.css
+++ b/BONUS/css/style.css
@@ -3,6 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+html{
+    scroll-behavior: smooth;
+}
 body{
     font-family: "open sans", sans-serif;
 }
@@ -230,6 +233,17 @@ footer a{
 }
 
 footer a:hover{
+    color: #0061FE;
+}
+.arrow-jumbo i{
+   transition: 0.5s;
+}
+.arrow-jumbo:visited i{
+    color: black;
+}
+
+.arrow-jumbo:hover i{
+    font-size: 50px;
     color: #0061FE;
 }
 
@@ -483,5 +497,66 @@ footer a:hover{
 
 
 
+/* BONUS */
+/* .d-none{
+    display: none;
+}
 
+.col-100:active .d-none{
+    display: block;
+} */
+
+/* BONUS 2.0 */
+input[type="checkbox"]{
+    display: none;
+}
+
+.answer-bonus{
+    display: none;
+}
+
+input[type="checkbox"]:checked + .question-bonus + .answer-bonus {
+    display: block;
+}
+
+.lang{
+    display: flex;
+}
+.footer-globe{
+    color: gray;
+    margin-right: 5px;
+}
+select {
+    appearance:none;
+    background-color: transparent;
+    border: none;
+    color: gray;
+    font-size: 17.5px;
+    font-weight: 100;
+    position: relative;
+    width: 75px;
+    height: 20px;
+  }
+  .select {
+    overflow: hidden; 
+    height: 20px;    
+    width: 75px;
+    position: relative;
+    display: block;
+}
+
+  .select:after {
+    content:"\f0de";
+    font-family: FontAwesome;
+    color: gray;
+    position: absolute; 
+    right: 5px;
+    top: 50%;
+    transform: translateY(-10%);/* qui sono andato un po a tents*/
+    z-index: 1;
+    text-align: center;
+    height: 100%;      
+    pointer-events: none;
+    box-sizing: border-box;   
+}
 
